[project]
name = "gym-puddle"
version = "0.0.3"
description = "Puddle-world environment in Gymnasium for RL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.28.0,<0.29.0",
    "pygame >=2.1.3",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
jit = [
    "numba>=0.60.0",
]
testing = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "ruff>=0.5.7",
]
dev = [
    "pre-commit>=3.8.0",
]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
