[project]
name = "gym-puddle"
version = "0.0.3"
description = "Puddle-world environment in Gymnasium for RL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.28.0,<0.29.0",
    "pygame >=2.1.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
jit = [
    "numba>=0.60.0",
]
dev = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "ruff>=0.5.7",
    "pre-commit>=3.8.0",
    "setuptools>=75.1.0",
]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["B", "C4", "C90", "COM", "D", "DTZ", "E", "F", "FLY", "G", "I", "ISC", "PIE", "PLC", "PLE", "PLW", "RET", "RUF", "RSE", "SIM", "TID", "UP", "W", "YTT"]
lint.ignore = ["COM812", "ISC001", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D212", "D213", "D400", "D401", "D402", "D415", "E501", "RUF012",]

